Fix: Event list cut off at bottom

--- a/src/domain/Events/Events.module.css
+++ b/src/domain/Events/Events.module.css
@@ -10,11 +10,15 @@
     /* border-bottom: 2px solid black; */
     text-align: center;
     width: 100%;
+    margin-bottom: 1rem;
 }
 
 .list {
     width: 100%;
     /* background-color: #f1f1f1; */
-    height: 90vh;
+    height: calc(90vh - 1rem);
+    /* height: 90vh; */
     overflow-y: scroll;
+    /* margin: 1rem; */
+    box-sizing: border-box;
 }
